# uwhoisd

./: .gitignore  .travis.yml  Pipfile  README  README.md  WHOWAS.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: nosetests.yml
client/: setup.py
client/uwhois/: __init__.py  client.py
config/: generic.json.sample
etc/logrotate.d/: uwhoisd
etc/systemd/system/: uwhoisd.service.sample
extra/: redis.conf  uwhoisd.ini
tests/: test_query.py  test_recursion.py
tools/: scraper.py  validate_config_files.py
travis_config/: uwhoisd.ini
uwhoisd/: __init__.py  exceptions.py  helpers.py  net.py  utils.py
uwhoisd/default/: __init__.py  abstractmanager.py  exceptions.py  helpers.py
whowas/: run_redis.sh  shutdown_redis.sh  whowas.conf
