[tool.poetry]
name = "uwhoisd"
version = "0.1.0"
description = "Universal domain WHOIS proxy server."
authors = ["Raphaël Vinot <raphael@vinot.info>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
tornado = "^6.4.1"
redis = {version = "^5.2.0", extras = ["hiredis"]}
beautifulsoup4 = "^4.12.3"
publicsuffix2 = "^2.20191221"

[tool.poetry.dev-dependencies]
Sphinx = "^8.1.3"
mypy = "^1.13.0"
types-redis = "^4.6.0.20241004"

[tool.poetry.scripts]
uwhoisd = 'uwhoisd:main'
run_backend = 'bin.run_backend:main'
start = 'bin.start:main'
stop = 'bin.stop:main'
shutdown = 'bin.shutdown:main'
update = "bin.update:main"
uwhoisd_manager = "bin.uwhoisd_manager:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.8
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true
