[project]
name = "uwhoisd"
version = "0.1.0"
description = "Universal domain WHOIS proxy server."
authors = [{name="Raphaël Vinot", email="raphael@vinot.info"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "redis[hiredis] (>=5.2.1)",
    "tornado (>=6.4.2)",
    "beautifulsoup4 (>=4.12.3)",
    "publicsuffix2 (>=2.20191221)"
]

[project.scripts]
uwhoisd = 'uwhoisd:main'
run_backend = 'bin.run_backend:main'
start = 'bin.start:main'
stop = 'bin.stop:main'
shutdown = 'bin.shutdown:main'
update = "bin.update:main"
uwhoisd_manager = "bin.uwhoisd_manager:main"

[tool.poetry.group.dev.dependencies]
Sphinx = "^8.1.3"
mypy = "^1.14.1"
types-redis = "^4.6.0.20241004"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
